# wheredo-desktop

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-linux.sh  build-windows.ps1  gen-icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assistant.rs  main.rs  tray.rs
src-tauri/src/core/: config.rs  feedback.rs  http.rs  mod.rs  oauth.rs  speech.rs  vision.rs
src-tauri/src/platform/: actions.rs  capture.rs  capture_linux.rs  capture_windows.rs  mod.rs  overlay.rs  permissions.rs
ui/: index.html  overlay.html
