[package]
name = "wheredo-desktop"
version = "0.1.0"
description = "Wheredo — voice assistant that sees your screen (Windows/Linux)"
authors = ["Guillaume Hussong"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api is only used by macOS dev builds (transparent windows);
# the shipped targets are Windows and Linux.
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
dirs = "5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
xcap = "0.9"
cpal = "0.15"
hound = "3"
rodio = "0.19"
enigo = "0.2"
rfd = "0.15"
open = "5"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
